| Bug #29550 | EXPLAIN PARTITIONS report wrong partition on PARTITION BY KEY with MySQL Cluster | ||
|---|---|---|---|
| Submitted: | 4 Jul 2007 16:21 | Modified: | 23 Nov 2007 10:22 |
| Reporter: | Mikael Ronstrom | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Mikael Ronstrom | Target Version: | |
[4 Jul 2007 16:21]
Mikael Ronstrom
[8 Sep 2007 22:04]
Mikael Ronstrom
Pushed into telco 6.2.6
[11 Sep 2007 13:02]
Jon Stephens
Documented bugfix in mysql-5.1.22-ndb-6.2.6 changelog. No changeset listed - will this also be pushed to 5.1-telco and/or 5.1-main?
[22 Nov 2007 14:32]
Mikael Ronstrom
Fixed in Telco 6.2, 6.3 and MySQL 6.0 but not in 5.1
[23 Nov 2007 10:22]
Jon Stephens
Also documented for 5.1.22-ndb-6.3.7 and 6.0.4. Closed.
