BUG#29550: EXPLAIN PARTITIONS gives wrong output for PARTITION BY KEY-tables